# cmake-with-gtest

./: CMakeLists.txt
tests/: CMakeLists.txt  hello_test.cpp
